2010-02-10  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fisnumeric): Improve documentation.
	(Fismatrix): Ditto.

2010-02-09  John W. Eaton  <jwe@octave.org>

	* graphics.cc, graphics.h.in
	(base_properties::get_hidden_children): New function.
	(base_properties::get_children_internal): New function.
	(base_properties::get_children): Call get_children_internal to
	do the work.
	(base_properties::set_children): Incorporate maybe_set_children
	function here.  Account for hidden children.
	(maybe_set_children): Delete.

	* c-file-ptr-stream.h (c_file_ptr_buf::buf_close): Rename from close.
	(c_file_ptr_buf::file_close): Rename from fclose.
	(c_file_ptr_stream::stream_close): Rename from close.
	(c_zfile_ptr_buf:buf_close): Rename from close.
	Change all callers.

2010-02-09  John W. Eaton  <jwe@octave.org>

	* dynamic-ld.cc (clear): Only warn if reloading a dynamically
	linked file that defines multiple functions.

2010-02-09  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/find.cc (find_nonzero_elem_idx (const Array<T>&, ...)): 
	Optimize creation of result indices.
	* data.cc (Fsort): Ditto.

2010-02-09  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/colamd.cc (Fcolamd, Fsymamd, Fetree): Fix improper arg
	checks.
	* DLD-FUNCTIONS/ccolamd.cc (Fccolamd, Fcsymamd): Likewise.

2010-02-08  Jaroslav Hajek  <highegg@gmail.com>

	* ov-re-mat.cc (octave_matrix::sort): Special-case sorting a known
	index vector.

2010-02-08  John W. Eaton  <jwe@octave.org>

	* ov-class.cc (Fclass): If more than 1 argument, check that
	call is inside class constructor first, then check for valid
	arguments.

2010-02-05  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (F__accumarray_sum__): Allow bool and char inputs.
	(do_accumarray_minmax, do_accumarray_minmax_fun): New helper funcs.
	(F__accumarray_min__, F__accumarray_max__): New defuns.

2010-02-04  John W. Eaton  <jwe@octave.org>

	* sysdep.cc: Don't include <sys/utsname.h>.

2010-02-04  John W. Eaton  <jwe@octave.org>
